Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-05-30 (SVN):
    * utils/hcc, dhcc: Don't use 0 instead of NULL as a function param
      for PR_Statement(), PR_GetDef() and CO_GenCode().

2012-05-27 (SVN):
    * cl_main.c, cl_ents.c, cl_input.c, cl_parse.c, cl_tent.c, host.c:
      Random tidying up. Also made hexenworld version of CL_BaseMove()
      to match its hexen2 counterpart by not calculating angles during
      cameramode.

2012-05-27 (SVN):
    * in_sdl.c: Support for joystick hat (POV) switch motion, based on
      ioquake3 code. We translate hat motions into K_AUX key presses.

2012-05-27 (SVN):
    * snd_timidity.c, snd_wildmidi.c: Changed a while construct into a
      for for better readability.

2012-05-25 (SVN):
    * in_sdl.c: IN_JoystickGetAxis() and IN_JoystickKeyeventForAxis() no
      longer accept a joystick id pointer parameter, but use the joy_id
      variable. Disabled the "keyevents for joystick axes" hack for now.
      Added a hack making IN_ActivateMouse() and IN_DeactivateMouse() to
      affect the trackball in order for joystick trackballs convert to
      mousemove properly. For the same purpose, move joystick trackball
      querying from IN_JoyMove() to IN_MouseMove(). Reserved K_AUX29-32
      for hat (POV) switch motion (like in_win.c, code to be added soon)
      and changed SDL_JOYBUTTONUP/DOWN events' upper key limit to AUX28.
    * docs/README: Removed the disabled joy_axiskeyevents documentation.
    * updated version date stamp to 2012-05-25.

2012-05-25 (SVN):
    * timidity: Made DLS instruments support optional. Default is no,
      because the dls code we inherited from libtimidity and SDL_sound
      isn't good enough and it isn't used in unix installations where
      timidity is normally needed, either.

2012-05-24 (SVN):
    * libs/timidity/instrum_dls.c (load_instrument_dls): Merged changes
      from vavoom svn repo rev. 4175 to fix loading of drums.