@@ -735,6 +735,25 @@ static void PrintFunction (const char *name)
 }
 
 /*
+==============
+PR_ParseError
+==============
+*/
+void PR_ParseError (const char *error, ...)
+{
+	va_list		argptr;
+	char	string[1024];
+
+	va_start (argptr, error);
+	q_vsnprintf (string, sizeof(string), error, argptr);
+	va_end (argptr);
+
+	printf ("%s(%i) : %s\n", strings+s_file, pr_source_line, string);
+
+	longjmp (pr_parse_abort, 1);
+}
+
+/*
 ============
 main
 ============
